# fuz

./: CMakeLists.txt  LICENSE  README.md
include/: vector.h
src/: fuz.c  main.c  vector.c
src/core/matcher/: matcher.c  matcher.h
src/data_handler/: handler.c  handler.h
src/tui/: tui.c  tui.h
src/vector/: vector.c  vector.h
